# pslog

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflow/: ci.yml
.github/workflows/: ci.yml
pslog/: __init__.py  log.py  utils.py  version.py
tests/: pslog1.py  pslog2.py  test.ps
