[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pslog"
authors = [
    {name = "Mattia Bruno", email = "mattia.bruno@cern.ch"},
]
description = "A Python utility to create Postscript or PDF log files"
license = {text = "GPL-2.0-only"}
readme = "README.md"
requires-python = ">=3.7"
classifiers=[
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU GPLv2",
    "Operating System :: OS Independent",
]
dynamic = ["version"]

[tool.setuptools.dynamic]
version = {file = "pslog/VERSION"}

[tool.setuptools.packages.find]
include = ["pslog*"]
